# Atom

./: Cargo.toml  README.md
AtomCrypte/: Cargo.toml  README.md
AtomCrypte/src/: lib.rs
CLI/: Cargo.toml
CLI/src/: lib.rs  main.rs
CLI/src/utils/: atomcrpyt.rs
src/: lib.rs  main.rs
src/utils/: atomcrpyt.rs
