[package]
name = "atom-cli"
version = "1.0.1"
edition = "2024"
description = "Atom Fastest Archive Format"
license = "MIT"

[dependencies]
memchr = "2.7.4"
tokio = { version = "1", features = ["full"] }
rayon = "1"
blake3 = "1.8.0"
zstd = "0.13"
aes-gcm = "0.10"
lz4_flex = "0.11"
thiserror = "2"
clap = "4"
rand = "0.9"